depends_compile_tests/tests/fail/derive/graph/multiple_edges_no_class.stderr
error: Multiple incoming edges but no `class` attribute.
  --> tests/fail/derive/graph/multiple_edges_no_class.rs:12:24
   |
12 |         comments_posts [label="CommentsPosts"];
   |                        ^^^^^^^^^^^^^^^^^^^^^^^
